# panthera_simulations

./: CMakeLists.txt  README.md  package.xml
panthera_description/: CMakeLists.txt  package.xml
panthera_description/launch/: panthera_rviz_visualization.launch
panthera_description/meshes/: base_left_cover.dae  base_right_cover.dae  l_wheel.stl  r_wheel.stl  wheel_holder_front_left.stl  wheel_holder_front_right.stl  wheel_holder_rear_left.stl  wheel_holder_rear_right.stl
panthera_description/rviz/: rviz_display.rviz
panthera_description/urdf/: panthera.urdf  panthera_with_2d_laser.urdf  panthera_with_velodyne.urdf
panthera_gazebo/: CMakeLists.txt  package.xml
panthera_gazebo/config/: controller.yaml
panthera_gazebo/launch/: panthera_empty_world.launch  panthera_hallway_world.launch  panthera_town_world.launch
panthera_gazebo/rviz/: rviz_display_hallway.rviz
panthera_gazebo/worlds/: empty.world  hallway.world  town.world
