<?xml version="1.0"?>
<package format="2">
  <name>panthera_description</name>
  <version>1.0.0</version>
  <description>The panthera_description package</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <exec_depend>velodyne_simulator</exec_depend>
</package>
