<?xml version="1.0"?>
<package format="2">
  <name>panthera_gazebo</name>
  <version>1.0.0</version>
  <description>The panthera_gazebo package</description>

  <maintainer email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</maintainer>

  <license>TODO</license>

  <author email="mlsdphonethk@gmail.com">Phone Thiha Kyaw</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>panthera_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
